--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* || General setup */
-
 html, body {
   margin: 0;
   padding: 0;
@@ -52,7 +50,7 @@ p, li, table {
 /* || header layout */
 
 div[class="nav"], article, footer, .secondary {
-  background-color: green;
+  background-color: whitesmoke;
 }
 
 article, footer, .secondary {
